--- a/myproject/myapp/templates/registration/login.html
+++ b/myproject/myapp/templates/registration/login.html
@@ -23,7 +23,7 @@
 </tr>
 </table>
 
-<input type="submit" value="Log me IN MadaFacka!" />
+<input type="submit" value="Log IN!" />
 <input type="hidden" name="next" value="{{ next|default:"/"}}" />
 </form>
 </body>
