--- a/myproject/myapp/templates/registration/login.html
+++ b/myproject/myapp/templates/registration/login.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>MDownloader3 App</title>
+    <title>DWD</title>
 </head>
 <body>
 {% if form.errors %}
